Prevent too large qty field when error message is added below

--- a/web/css/layout/product/_common.less
+++ b/web/css/layout/product/_common.less
@@ -118,6 +118,7 @@
         }
     }
 
+    .field.qty > .control,
     .input-text.qty {
         max-width: @16;
     }
